--- a/nav_speaker.html
+++ b/nav_speaker.html
@@ -269,6 +269,50 @@ Ha sido docente en la Universidad de Lima, Pontificia Universidad Católica del 
         </div>
       </div><!-- /.row -->
 
+       <!-- HERNAN QUINTANA -->
+        <div class="row">
+
+        <div class="span12">
+          <div class="row">
+            <div class="span3">
+              <!--<img src="assets/images/nicolas.jpg" class="img-polaroid">-->
+              <div class="container2">
+                <section class="main">
+                   <ul class="ch-grid">
+                    <li>
+                      <div class="ch-item ch-img-30">
+                        <div class="ch-info-wrap">
+                          <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                              <h3>Juan F.</h3>
+                          <p>Invitado</p>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </section>
+              </div>
+            </div>
+            <div class="span9">
+              <h3>Juan Carlos Ferro</h3>
+              <h4>CTO Dipoo (Invitado)</h4>
+              <div class="hr"><hr /></div>
+              <p>
+              Partner & CTO Dipoo, Partner Director Mediabyte SAC
+Grado de ingeniero con mención en Ingeniería de Sistemas en Universidad Nacional Mayor de San Marcos, Pattern-Oriented Software Architectures for Concurrent and Networked Software - Coursera, Diplomado de Marketing Digital - UPC, Curso de Inteligencia de negocios - Cibertec
+Experiencia en Desarrollo Web, Desarrollo Móvil, Mobile Marketing, Digital Marketing, Advertising, Desarrollo de Startup.</p>
+
+
+
+
+            </div>
+          </div>
+        </div>
+      </div><!-- /.row -->
+
 
 
 <!-- EDUARDO MEDINA -->
